[package]
name = "pv_leopard"
version = "1.0.1"
edition = "2018"
description = "The Rust bindings for Picovoice's Leopard library"
license = "Apache-2.0"
homepage = "https://picovoice.ai/platform/leopard/"
repository = "https://github.com/Picovoice/leopard"
keywords = [
	"speech-to-text",
]
publish = true

include = [
	".gitignore",
	"build.rs",
	"Cargo.toml",
	"data/",
	"README.md",
	"src/",
]

[lib]
name = "leopard"
path = "src/lib.rs"
crate_type = ["lib"]

[dependencies]
libc = "0.2"
libloading = "0.7"

[dev-dependencies]
rodio = "0.14"
itertools = "0.10.1"
